--- a/style/weaterApp.scss
+++ b/style/weaterApp.scss
@@ -10,7 +10,7 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-image: url(../assets/background.jpg);
+    background-image: url(../assets/background-day.jpg);
     background-position: center;
     background-size: cover;
     font-family: 'Roboto', sans-serif;
