--- a/style/weaterApp.scss
+++ b/style/weaterApp.scss
@@ -40,7 +40,19 @@ body{
         }}
 }
 
+.titleBox{
+        font-size: 0.97em;
+        font-weight: 500;
+        width: 100%;
+        height: 10%;
+        filter: opacity(0.5);
 
+        img {
+            height: 15px;
+            margin-right: 2%;
+            filter: opacity(0.7);
+        }
+}
 
 
     .main_map{
