--- a/style/_mainAirquality.scss
+++ b/style/_mainAirquality.scss
@@ -7,6 +7,20 @@
     flex-direction: column;
     justify-content: space-between;
 
+    h2{
+        font-size: 0.97em;
+        font-weight: 500;
+        width: 100%;
+        height: 10%;
+        filter: opacity(0.5);
+
+        img {
+            height: 15px;
+            margin-right: 2%;
+            filter: opacity(0.7);
+        }
+    }
+
 
     h3 {
         font-size: 1.6em;
@@ -36,7 +50,7 @@
             filter: opacity(0.9);
             overflow: hidden;
             position: relative;
-            .ratio__dot{
+            .airquality__ratio__dot{
                 filter:contrast(5);
                 height: 9px;
                 width: 9px;
