--- a/style/_mainForecast.scss
+++ b/style/_mainForecast.scss
@@ -1,14 +1,22 @@
 
 .mainSection__forecast{
     grid-area: 2 / 1 / 3 / 2;
-    padding: 1% 3%;
+    padding: 1.5% 3%;
     height: 100%;
     display: flex;
     flex-direction: column;
 
     h2{
-        img{
+        font-size: 0.97em;
+        font-weight: 500;
+        width: 100%;
+        height: 10%;
+        filter: opacity(0.5);
+
+        img {
+            height: 15px;
             margin-right: 1%;
+            filter: opacity(0.7);
         }
     }
 
@@ -17,12 +25,51 @@
         width: 100%;
         display: flex;
         align-items: center;
+        gap: 3%;
         .forecast__container__box{
             height: 80%;
-            width: 20%;
-            border-right: 1px solid rgba(163, 163, 163, 0.623);
-        }:first-child{
-            border-left: 1px solid rgba(163, 163, 163, 0.623);
+            width: 20%;  
+            padding: 3% 1%;
+            box-shadow: 0px 0px 10px 1px rgb(205, 205, 206);
+            border-radius: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+            h2{
+                margin-top: -5%;
+                text-align: center;
+                font-size: 1.3em;
+
+            }
+            img{
+                margin-top: -15%;
+                width: 60px;
+            }
+            .forecast__temp{
+                width: 100%;
+                margin-top: -5%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 4%;
+                .forecast__ratio{
+                    height: 6px;
+                    width: 60px;
+                    border-radius: 5px;
+                    background: rgb(190, 190, 190);
+                    position: relative;
+                    .forecast__ratio__range{
+                        position: absolute;
+                        height: 6px;
+                        width: 20px;
+                        background: rgb(3, 81, 250);
+                        filter: none;
+                        border-radius: 5px;
+                        left: 50%;
+                    }
+                }
+            }
         }
     }
 }
