--- a/style/_mainForecast.scss
+++ b/style/_mainForecast.scss
@@ -5,6 +5,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     h2{
         font-size: 0.97em;
@@ -26,9 +27,10 @@
         display: flex;
         align-items: center;
         gap: 3%;
+        
         .forecast__container__box{
             height: 80%;
-            width: 20%;  
+            width: 25%;  
             padding: 3% 1%;
             box-shadow: 0px 0px 10px 1px rgb(205, 205, 206);
             border-radius: 20px;
@@ -46,11 +48,17 @@
                 margin-top: -15%;
                 width: 60px;
             }
+            h3{
+                width: 25%;
+                
+            }:first-child{
+                text-align: right;
+            }
             .forecast__temp{
                 width: 100%;
                 margin-top: -5%;
                 display: flex;
-                justify-content: center;
+                justify-content: space-evenly;
                 align-items: center;
                 gap: 4%;
                 .forecast__ratio{
@@ -62,11 +70,11 @@
                     .forecast__ratio__range{
                         position: absolute;
                         height: 6px;
-                        width: 20px;
+                       
                         background: rgb(3, 81, 250);
                         filter: none;
                         border-radius: 5px;
-                        left: 50%;
+                        
                     }
                 }
             }
