[forecast] Added days's names [all] changed text color

--- a/style/_mainForecast.scss
+++ b/style/_mainForecast.scss
@@ -42,6 +42,9 @@
                 margin-top: -5%;
                 text-align: center;
                 font-size: 1.3em;
+              
+                font-weight: 400;
+                
 
             }
             img{
