--- a/style/_mainToday.scss
+++ b/style/_mainToday.scss
@@ -28,6 +28,7 @@
         display: flex;
         gap: 2%;
         .weatherBoxes__box{
+            transition: .5;
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -40,5 +41,8 @@
             }
             
         }
+
+        
+        
     }
 }
