--- a/style/weatherApp.scss
+++ b/style/weatherApp.scss
@@ -38,22 +38,22 @@ body{
             background: white;
             filter: opacity(.5);
             border-radius: 20px;
+
+            .animated {
+                opacity: 0; /* Elementy są niewidoczne na początku */
+                transform: translateY(20px); /* Przesunięcie w górę */
+                transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; /* Animacje trwają 0,5 sekundy */
+            }
+            
+            .animated.show {
+                opacity: 1; /* Elementy stają się widoczne */
+                transform: translateY(0); /* Powrót do pozycji początkowej */
+            }
         }}
+
+
 }
 
-.titleBox{
-        font-size: 0.97em;
-        font-weight: 500;
-        width: 100%;
-        height: 10%;
-        filter: opacity(0.5);
-
-        img {
-            height: 15px;
-            margin-right: 2%;
-            filter: opacity(0.7);
-        }
-}
 
 
 
